canary-app-istio-codefresh/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-rollout
spec:
  revisionHistoryLimit: 1
  replicas: 3
  selector:
    matchLabels:
      app: summer-k8s-app
  template:
    metadata:
      labels:
        app: summer-k8s-app
    spec:
      containers:
      - name: webserver-simple
        image: docker.io/kostiscodefresh/gitops-canary-app:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    canary:
      stableService: summer-k8s-service-stable
      canaryService: summer-k8s-service-canary
      trafficRouting:
        istio:
          virtualService:
            name: summer-k8s-mapping
            routes:
            - primary
      steps:
      - setWeight: 30
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 100
      - pause: {}
